syntax = "proto3";

message Element {
  float value = 1;
}

message MinMaxReply {
  float min = 1;
  float max = 2;
}

service MinMax {
  rpc MinMaxCalc (stream Element) returns (MinMaxReply) {}
}
